[project]
name = "sable-shared"
version = "0.1.0"
description = "Shared Python library for Sable FastAPI services — service auth, request ID, structured logging, error handling, env loading."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "starlette>=0.41",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sable_shared*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
